--- a/my-app/Jenkinsfile
+++ b/my-app/Jenkinsfile
@@ -1,9 +1,18 @@
 pipeline {
-    agent any 
+    agent any
+
+    tools {
+        nodejs '1.6.1'
+    }
+
     stages {
-        stage('Build') { 
+        stage('Build') {
             steps {
-                sh 'npm install' 
+                script {
+                    // Your npm and Node.js commands here
+                    sh 'npm install'
+                    sh 'npm run build'
+                }
             }
         }
     }
